fix: fixed some detected issues from SonarQube